--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Wakester
 description: Yet Another Cyber Security Blog 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://www.google.com/url?sa=i&url=https%3A%2F%2Fsoundcloud.com%2Fuser-948739054&psig=AOvVaw0KxPJblkk1ktto2oMwey-J&ust=1598891085300000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCOjFxcyrw-sCFQAAAAAdAAAAABAD
+avatar: https://avatars0.githubusercontent.com/u/34523029?s=460&u=2f29bf49fb29952b3e33388ba0e67d14a1691e8c&v=4
 
 #
 # Flags below are optional
